syntax = "proto3";

package org.coursera.example.protos;

service UserReader {
    rpc byId (UserId) returns (User);
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserId {
    string id = 1;
}